--- a/ba_vega_lite/package.json
+++ b/ba_vega_lite/package.json
@@ -10,6 +10,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "react-vega": "^7.6.0",
+    "vega": "^6.1.2",
+    "vega-lite": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
