--- a/ba_vega_lite/package.json
+++ b/ba_vega_lite/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.29.1",
     "react-vega": "^7.6.0",
     "typescript": "^4.9.5",
     "vega": "^6.1.2",
