--- a/ba_vega_lite/package.json
+++ b/ba_vega_lite/package.json
@@ -17,6 +17,7 @@
     "react-tooltip": "^5.29.1",
     "react-vega": "^7.6.0",
     "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "vega": "^6.1.2",
     "vega-lite": "^6.2.0",
     "web-vitals": "^2.1.4"
